# morse_and_ros-moveit_example

./: .gitignore  README.md
iri_klwr_bringup/: CMakeLists.txt  package.xml  rosgraph.dot
iri_klwr_bringup/launch/: demo_moveit_with_klwr_in_morse.launch  start_klwr_in_morse.launch  start_moveit_with_klwr_in_morse.launch  start_rviz_for_planning.launch  start_simulated_klwr.launch
iri_klwr_description/: CMakeLists.txt  package.xml
iri_klwr_description/launch/: iri_klwr_description.launch
iri_klwr_description/urdf/: kuka_lwr.urdf
iri_klwr_morse/: CMakeLists.txt  package.xml
iri_klwr_morse/morse/my_simulation/: default.py
iri_klwr_morse/morse/my_simulation/src/my_simulation/helpers/: adapters.py  morse_local_config.py
iri_klwr_morse/morse/my_simulation/src/my_simulation/middleware_ros/: __init__.py  arm_controller.py  arm_jointstate_pub.py
iri_klwr_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
iri_klwr_moveit_config/config/: controllers.yaml  joint_limits.yaml  kuka_lwr.srdf  ompl_planning.yaml
iri_klwr_moveit_config/launch/: default_warehouse_db.launch  demo.launch  iri_kuka_moveit_controller_manager.launch.xml  iri_kuka_moveit_sensor_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  start_demo_for_morse.launch  start_moveit_for_morse.launch  trajectory_execution.launch.xml  warehouse.launch
